--- a/index.html
+++ b/index.html
@@ -2,233 +2,219 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>GEOMETRIC CHAOS · SMOOTH PULSE</title>
+<title>GEOMETRIC CHAOS · CYBER GRID</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-html, body {
-  margin:0;
-  padding:0;
-  background:#000;
-  overflow:hidden;
-  height:100%;
-  font-family:'Courier New', monospace;
-  color:#0af;
-}
-
+html, body { margin:0; padding:0; background:#000; overflow:hidden; height:100%; font-family:'Courier New', monospace; color:#0af; }
 canvas { display:block; }
-
-#hud {
-  position:absolute;
-  top:16px;
-  left:16px;
-  font-size:13px;
-  opacity:0.7;
-  letter-spacing:1px;
-  pointer-events:none;
-}
-
-#status {
-  position:absolute;
-  top:40px;
-  left:16px;
-  font-size:11px;
-  opacity:0.6;
-}
-
-#data {
-  position:absolute;
-  bottom:72px;
-  left:16px;
-  font-size:10px;
-  opacity:0.6;
-  max-width:400px;
-  line-height:1.4;
-  pointer-events:none;
-}
-
-#clock {
-  position:absolute;
-  bottom:72px;
-  right:16px;
-  font-size:11px;
-  opacity:0.45;
-  color:#6cf;
-  text-align:right;
-  pointer-events:none;
-}
-
-/* ===== SYSTEM 1 — як level1 ===== */
-#system1 {
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  font-size:13px;
-  color:#9fe7ff;
-  text-decoration:underline;
-  letter-spacing:1px;
-  z-index:10;
-}
-#system1:hover {
-  color:#ffffff;
-}
-
-/* ===== FOOTER ===== */
-#footerText {
-  position:absolute;
-  bottom:16px;
-  width:100%;
-  text-align:center;
-  font-size:11px;
-  opacity:0.5;
-  letter-spacing:1px;
-  pointer-events:none;
-}
-
-/* ===== PULT ===== */
-#pult {
-  position:absolute;
-  bottom:16px;
-  left:16px;
-  font-size:10px;
-  opacity:0.55;
-  line-height:1.5;
-}
-#pult input {
-  accent-color:#6cf;
-}
+#hud { position:absolute; top:16px; left:16px; font-size:13px; opacity:0.7; pointer-events:none; letter-spacing:1px; }
+#data { position:absolute; bottom:80px; left:16px; font-size:10px; opacity:0.6; pointer-events:none; max-width:400px; line-height:1.4; }
+#data .real { color:#0f0; font-weight:bold; }
+#data .fallback { color:#888; }
+#data .warning { color:#ff0; }
+#clock { position:absolute; bottom:16px; right:16px; font-size:11px; opacity:0.45; color:#6cf; text-align:right; pointer-events:none; line-height:1.3; }
+#status { position:absolute; top:40px; left:16px; font-size:11px; opacity:0.6; color:#0af; }
 </style>
 </head>
-
 <body>
-
-<div id="hud">GEOMETRIC CHAOS — SMOOTH PULSE</div>
+<div id="hud">GEOMETRIC CHAOS — CYBER GRID</div>
 <div id="status"></div>
-<div id="data">ініціалізація…</div>
+<div id="data">ініціалізація...</div>
 <div id="clock">—</div>
-
-<a id="system1" href="https://lavandaaudit.github.io/level1/#" target="_blank">
-  system 1
-</a>
-
-<div id="footerText">
-  ibonarium project 2026 by lavanda.level#2
-</div>
-
-<div id="pult">
-  breathing<br>
-  <input type="checkbox" id="breathOn" checked> enable<br>
-  intensity<br>
-  <input type="range" id="breathPower" min="0" max="100" value="60">
-</div>
-
 <canvas id="c"></canvas>
 
 <script>
-const canvas = document.getElementById('c');
-const ctx = canvas.getContext('2d');
-const clockDiv = document.getElementById('clock');
+const canvas=document.getElementById('c');
+const ctx=canvas.getContext('2d');
+const dataDiv=document.getElementById('data');
+const clockDiv=document.getElementById('clock');
+const statusDiv=document.getElementById('status');
 
-const breathOn = document.getElementById('breathOn');
-const breathPower = document.getElementById('breathPower');
+function resize(){canvas.width=window.innerWidth;canvas.height=window.innerHeight;}
+window.addEventListener('resize',resize);resize();
 
-function resize(){
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
+const startTime=Date.now();
+function formatRelativeTime(ms){
+  const s=Math.floor(ms/1000);
+  if(s<60)return `+${s}s`;
+  const m=Math.floor(s/60); const sec=s%60;
+  if(m<60)return `+${m}m ${sec}s`;
+  const h=Math.floor(m/60); const min=m%60;
+  return `+${h}h ${min}m`;
 }
-addEventListener('resize', resize);
-resize();
+function updateClock(){
+  const now=new Date();
+  clockDiv.innerHTML=`${String(now.getHours()).padStart(2,'0')}:${String(now.getMinutes()).padStart(2,'0')}:${String(now.getSeconds()).padStart(2,'0')}<br>${formatRelativeTime(Date.now()-startTime)}`;
+}
+setInterval(updateClock,1000);updateClock();
 
-/* ===== CLOCK ===== */
-const startTime = Date.now();
-setInterval(()=>{
-  const d = new Date();
-  clockDiv.innerHTML =
-    `${d.toLocaleTimeString()}<br>+${Math.floor((Date.now()-startTime)/1000)}s`;
-},1000);
-
-/* ===== DATA ===== */
-let realData = {
-  chaos:0.5,
-  solar_wind:0.5
-};
-
-/* ===== STARS ===== */
+// --- Зірки ---
 const stars=[];
-for(let i=0;i<260;i++){
-  stars.push({
-    x:Math.random()*innerWidth,
-    y:Math.random()*innerHeight,
-    a:Math.random()*0.4+0.2,
-    s:Math.random()*1.4+0.4
-  });
+for(let i=0;i<300;i++){
+  stars.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,size:Math.random()*1.2+0.4,baseAlpha:Math.random()*0.4+0.25,twinkle:Math.random()*0.015+0.006});
 }
 
-/* ===== BLOBS ===== */
-const blobs=[];
-for(let i=0;i<7;i++){
-  blobs.push({
-    a:Math.random()*Math.PI*2,
-    d:70+Math.random()*60,
-    ph:Math.random()*Math.PI*2
+// --- Дані ---
+let realData={seismic:0.5,magnetic:0.5,atmosphere_wind:0.5,atmosphere_pressure:0.5,atmosphere_temp:0.5,ocean:0.5,solar_radiation:0.5,solar_wind:0.5,precipitation:0.5,chaos:0.5};
+let dataHistory={};Object.keys(realData).forEach(k=>dataHistory[k]=[]);
+let sources={};
+
+const blobs=[
+  {param:'seismic',color:'rgba(220,60,80,',phase:0,targetSize:6,targetAlpha:0.75},
+  {param:'magnetic',color:'rgba(60,180,255,',phase:1.2,targetSize:6,targetAlpha:0.75},
+  {param:'atmosphere_wind',color:'rgba(80,255,160,',phase:2.4,targetSize:6,targetAlpha:0.7},
+  {param:'atmosphere_temp',color:'rgba(255,180,60,',phase:3.6,targetSize:6,targetAlpha:0.7},
+  {param:'solar_radiation',color:'rgba(255,240,100,',phase:4.8,targetSize:5,targetAlpha:0.65},
+  {param:'solar_wind',color:'rgba(200,120,255,',phase:6.0,targetSize:6,targetAlpha:0.7},
+  {param:'precipitation',color:'rgba(100,220,255,',phase:7.2,targetSize:6,targetAlpha:0.7}
+];
+blobs.forEach(b=>{b.angle=Math.random()*Math.PI*2;b.radius=60+Math.random()*50;b.currentSize=b.targetSize;b.currentAlpha=b.targetAlpha;b.currentDist=b.radius;});
+
+function lerp(a,b,t){return a+(b-a)*t;}
+
+// --- Fetch real-time data ---
+async function fetchRealPlanetData(){
+  statusDiv.innerHTML='оновлення...'; let loaded=0;
+  try{
+    const weatherUrl=`https://api.open-meteo.com/v1/forecast?latitude=50.55&longitude=30.25&current=temperature_2m,wind_speed_10m,surface_pressure,precipitation,shortwave_radiation`;
+    const wRes=await fetch(weatherUrl);
+    if(wRes.ok){const w=(await wRes.json()).current||{};
+      realData.atmosphere_temp=Math.min(1,Math.max(0,(w.temperature_2m+40)/80));
+      realData.atmosphere_wind=Math.min(1,(w.wind_speed_10m||0)/80);
+      realData.atmosphere_pressure=Math.min(1,Math.max(0,((w.surface_pressure||1013)-950)/150));
+      realData.precipitation=Math.min(1,(w.precipitation||0)/15);
+      realData.solar_radiation=Math.min(1,(w.shortwave_radiation||0)/1200);
+      loaded+=5; sources.atmosphere_temp=sources.atmosphere_wind=sources.atmosphere_pressure=sources.precipitation=sources.solar_radiation=true;
+    }
+    const oceanRes=await fetch(`https://marine-api.open-meteo.com/v1/marine?latitude=44.5&longitude=34.0&current=wave_height`);
+    if(oceanRes.ok){const o=(await oceanRes.json()).current||{}; realData.ocean=Math.min(1,(o.wave_height||0)/8); loaded++; sources.ocean=true;}
+    const eqRes=await fetch('https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson');
+    if(eqRes.ok){const eq=await eqRes.json(); const feats=eq.features||[]; const count=feats.length; const maxMag=feats.reduce((m,f)=>Math.max(m,f.properties?.mag||0),0); realData.seismic=Math.min(1,(count/30)+(maxMag/10)*0.5); loaded++; sources.seismic=true;}
+    const proxy='https://corsproxy.io/?';
+    try{const solarRes=await fetch(proxy+encodeURIComponent('https://services.swpc.noaa.gov/products/solar-wind/plasma-7-day.json'));
+      if(solarRes.ok){const data=await solarRes.json(); const latest=data[data.length-1]||[]; const speed=parseFloat(latest[3])||400; realData.solar_wind=Math.min(1,Math.max(0,(speed-250)/750)); loaded++; sources.solar_wind=true;}}catch{}
+    try{const kpRes=await fetch(proxy+encodeURIComponent('https://services.swpc.noaa.gov/products/geospace/planetary-k-index-1-minute.json'));
+      if(kpRes.ok){const data=await kpRes.json(); const latestKp=parseFloat(data[data.length-1]?.[1])||0; realData.magnetic=Math.min(1,latestKp/9); loaded++; sources.magnetic=true;}}catch{}
+    Object.keys(realData).forEach(k=>{if(k!=='chaos'){dataHistory[k].push(realData[k]); if(dataHistory[k].length>80)dataHistory[k].shift();}});
+    let vars=[]; Object.keys(dataHistory).forEach(k=>{if(k==='chaos')return; const h=dataHistory[k]; if(h.length<2)return; const mean=h.reduce((a,b)=>a+b,0)/h.length; const varnce=h.reduce((a,b)=>a+(b-mean)**2,0)/h.length; vars.push(Math.sqrt(varnce));});
+    realData.chaos=vars.length?Math.min(1,vars.reduce((a,b)=>a+b,0)/vars.length*10):0.5;
+    blobs.forEach(b=>{const v=realData[b.param]||0.5;b.targetSize=4+v*14;b.targetAlpha=0.3+v*0.6;b.targetDist=70+v*80;});
+    let html=''; Object.keys(realData).forEach(k=>{let cls='fallback'; if(sources[k]===true)cls='real'; else if(k!=='chaos')cls='warning'; html+=`${k.padEnd(20,' ')} <span class="${cls}">${realData[k].toFixed(3)}</span><br>`;});
+    dataDiv.innerHTML=html; statusDiv.innerHTML=loaded>0?'оновлено':'';
+  }catch(e){console.error(e);statusDiv.innerHTML='';}
+}
+fetchRealPlanetData(); setInterval(fetchRealPlanetData,120000);
+
+// --- Лівий графік (офіційна сітка з підписами) ---
+function drawLeftGrid(){
+  const margin=16, width=180, height=120;
+  ctx.save();
+  ctx.translate(margin, canvas.height-margin-height);
+  // Сітка
+  ctx.strokeStyle='rgba(0,180,255,0.3)';
+  ctx.lineWidth=1;
+  for(let i=0;i<=5;i++){
+    const y=i*height/5;
+    ctx.beginPath(); ctx.moveTo(0,y); ctx.lineTo(width,y); ctx.stroke();
+  }
+  for(let i=0;i<=5;i++){
+    const x=i*width/5;
+    ctx.beginPath(); ctx.moveTo(x,0); ctx.lineTo(x,height); ctx.stroke();
+  }
+  // Дані
+  const keys=Object.keys(realData);
+  keys.forEach((k,i)=>{
+    const val=realData[k];
+    const x=i*(width/(keys.length-1));
+    const y=height-val*height;
+    ctx.beginPath();
+    ctx.arc(x,y,3,0,Math.PI*2);
+    ctx.fillStyle='rgba(0,255,180,0.9)';
+    ctx.fill();
+    ctx.fillStyle='#0af';
+    ctx.font='9px Courier New';
+    ctx.fillText(k,x-15,height+12);
   });
+  ctx.restore();
 }
 
+// --- Формули ---
+const formulas=["E=mc^2","F=ma","∇·E=ρ/ε₀","∫F·dr=ΔK","a^2+b^2=c^2","iħ∂ψ/∂t=Hψ","V=IR"];
+const formulaObjs=formulas.map(f=>({text:f,x:Math.random()*window.innerWidth,y:Math.random()*window.innerHeight,alpha:0,phase:Math.random()*Math.PI*2}));
+
+// --- Основна геометрична анімація ---
 let t=0;
 function loop(){
   t+=0.016;
-  ctx.fillStyle='rgba(0,0,0,0.08)';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle='rgba(0,0,0,0.08)'; ctx.fillRect(0,0,canvas.width,canvas.height);
+  const chaos=realData.chaos, cx=canvas.width/2, cy=canvas.height/2;
 
-  const cx=canvas.width/2, cy=canvas.height/2;
-
-  /* stars */
+  // Зірки
+  const starMod=1-chaos*0.3;
   stars.forEach(s=>{
-    ctx.fillStyle=`rgba(220,235,255,${s.a})`;
-    ctx.fillRect(s.x,s.y,s.s,s.s);
+    const tw=Math.sin(t*s.twinkle*12+s.x*0.008)*0.18*starMod;
+    ctx.fillStyle=`rgba(220,235,255,${Math.max(0.08,s.baseAlpha+tw).toFixed(3)})`;
+    ctx.fillRect(s.x,s.y,s.size,s.size);
   });
 
-  /* breathing */
-  const breathBase = Math.sin(t*0.8);
-  const breath =
-    breathOn.checked
-      ? breathBase * (breathPower.value/100)
-      : 0;
-
-  /* blobs */
-  blobs.forEach((b,i)=>{
-    b.a += 0.006 + realData.chaos*0.03;
-    const pulse = Math.sin(t + b.ph) * 0.4;
-    const alpha = 0.25 + (pulse + breath)*0.25;
-
-    const x = cx + Math.cos(b.a)*b.d;
-    const y = cy + Math.sin(b.a)*b.d;
-
-    ctx.fillStyle=`rgba(120,220,255,${Math.max(0,alpha)})`;
-    ctx.beginPath();
-    ctx.arc(x,y,6*(1+pulse*0.4),0,Math.PI*2);
-    ctx.fill();
-  });
-
-  /* triangle core breathing */
-  const R = 120 + breath*40;
-  ctx.beginPath();
-  for(let i=0;i<3;i++){
-    const a=i*Math.PI*2/3+t*0.12;
-    const x=cx+Math.cos(a)*R;
-    const y=cy+Math.sin(a)*R;
-    i?ctx.lineTo(x,y):ctx.moveTo(x,y);
+  // Пульсуюча сітка
+  const gridSpacing=30;
+  for(let gx=0; gx<canvas.width; gx+=gridSpacing){
+    for(let gy=0; gy<canvas.height; gy+=gridSpacing){
+      const offsetX=Math.sin((gx+gy+t*50)*0.02)*15*chaos;
+      const offsetY=Math.cos((gx-gy+t*50)*0.02)*15*chaos;
+      ctx.beginPath();
+      ctx.moveTo(gx,gy);
+      ctx.lineTo(gx+offsetX,gy+offsetY);
+      ctx.strokeStyle=`rgba(180,100,255,0.03)`;
+      ctx.lineWidth=1;
+      ctx.stroke();
+    }
   }
-  ctx.closePath();
-  ctx.strokeStyle=`rgba(255,200,120,${0.15+breath*0.2})`;
-  ctx.lineWidth=2;
-  ctx.stroke();
+
+  // Спіралі
+  for(let s=0;s<4;s++){
+    ctx.beginPath();
+    for(let i=0;i<150;i++){
+      const angle=i*0.18+t*0.5+s;
+      const radius=i*0.6+30*Math.sin(t*0.5+i*0.3)+realData.solar_radiation*20;
+      const x=cx+Math.cos(angle+s)*radius;
+      const y=cy+Math.sin(angle+s)*radius;
+      i===0?ctx.moveTo(x,y):ctx.lineTo(x,y);
+    }
+    ctx.strokeStyle=`rgba(255,${100+s*40},${50+s*30},${0.05+realData.solar_wind*0.15})`;
+    ctx.lineWidth=1+s*0.5; ctx.stroke();
+  }
+
+  // Формули на фоні
+  formulaObjs.forEach(f=>{
+    f.alpha=Math.sin(t*0.5+f.phase)*0.5+0.5;
+    ctx.fillStyle=`rgba(180,255,200,${f.alpha*0.25})`;
+    ctx.font='16px Courier New';
+    ctx.fillText(f.text,f.x+Math.sin(t+f.phase)*20,f.y+Math.cos(t+f.phase)*15);
+  });
+
+  // Лівий графік
+  drawLeftGrid();
+
+  // Анімація блобів
+  const avg=blobs.reduce((s,b)=>s + (realData[b.param]||0.5),0)/blobs.length;
+  blobs.forEach(b=>{
+    b.currentSize=lerp(b.currentSize,b.targetSize,0.04+chaos*0.10);
+    b.currentAlpha=lerp(b.currentAlpha,b.targetAlpha,0.05+chaos*0.12);
+    b.currentDist=lerp(b.currentDist,b.targetDist,0.04+chaos*0.08);
+    const pulse=Math.sin(t*0.7+b.phase)*0.15+Math.sin(t*1.3+b.phase*1.4)*0.09+Math.sin(t*2.1+b.phase*0.7)*0.06*chaos;
+    const size=b.currentSize*(1+pulse*(0.4+chaos*0.9));
+    b.angle+=(0.008+avg*0.03+chaos*0.04)*(1+pulse*0.3);
+    const x=cx+Math.cos(b.angle)*b.currentDist;
+    const y=cy+Math.sin(b.angle)*b.currentDist;
+    ctx.fillStyle=b.color+(b.currentAlpha+pulse*0.25).toFixed(2)+')';
+    ctx.beginPath(); ctx.arc(x,y,size,0,Math.PI*2); ctx.fill();
+  });
 
   requestAnimationFrame(loop);
 }
 loop();
 </script>
-
 </body>
 </html>
