--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@ async function fetchRealPlanetData() {
   const proxy = 'https://corsproxy.io/?';
 
   try {
-    // Погода
     const weatherUrl = 'https://api.open-meteo.com/v1/forecast?latitude=50.45&longitude=30.52&current=temperature_2m,relative_humidity_2m,precipitation,cloud_cover,wind_speed_10m,surface_pressure,shortwave_radiation,uv_index,visibility';
     const wRes = await fetch(weatherUrl);
     if (wRes.ok) {
@@ -139,7 +138,6 @@ async function fetchRealPlanetData() {
       sources.weather = true;
     }
 
-    // Air Quality
     const airUrl = 'https://air-quality-api.open-meteo.com/v1/air-quality?latitude=50.45&longitude=30.52&current=pm2_5,carbon_monoxide,nitrogen_dioxide,sulphur_dioxide,ozone';
     const airRes = await fetch(airUrl);
     if (airRes.ok) {
@@ -155,7 +153,6 @@ async function fetchRealPlanetData() {
       sources.air_quality = true;
     }
 
-    // Seismic (USGS)
     const eqUrl = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson';
     const eqRes = await fetch(eqUrl);
     if (eqRes.ok) {
@@ -168,20 +165,18 @@ async function fetchRealPlanetData() {
       loaded++;
     }
 
-    // Solar Wind (NOAA)
     try {
       const solarRes = await fetch(proxy + encodeURIComponent('https://services.swpc.noaa.gov/products/solar-wind/plasma-7-day.json'));
       if (solarRes.ok) {
         const data = await solarRes.json();
         const latest = data[data.length - 1] || [];
-        const speed = parseFloat(latest[2]) || 400; // зазвичай поле 2 — speed (km/s)
+        const speed = parseFloat(latest[3]) || 400;
         realData.solar_wind = Math.min(1, Math.max(0, (speed - 250) / 750));
         sources.solar_wind = true;
         loaded++;
       }
     } catch (e) { console.warn('Solar wind fetch failed', e); }
 
-    // Magnetic / Kp (NOAA)
     try {
       const kpRes = await fetch(proxy + encodeURIComponent('https://services.swpc.noaa.gov/products/noaa-planetary-k-index.json'));
       if (kpRes.ok) {
@@ -194,7 +189,6 @@ async function fetchRealPlanetData() {
       }
     } catch (e) { console.warn('Kp fetch failed', e); }
 
-    // Збереження історії
     Object.keys(realData).forEach(k => {
       if (k !== 'chaos') {
         dataHistory[k].push(realData[k]);
@@ -247,11 +241,91 @@ async function fetchRealPlanetData() {
 fetchRealPlanetData();
 setInterval(fetchRealPlanetData, 120000);
 
+// --- Графік 4: Загальний (накладання всіх) — найвищий ---
+function drawCombinedGrid() {
+  const margin = 16, width = 180, height = 120;
+  ctx.save();
+  ctx.translate(margin, 120); // піднято вгору
+
+  ctx.strokeStyle = 'rgba(180,180,180,0.2)';
+  ctx.lineWidth = 1;
+  for (let i = 0; i <= 5; i++) {
+    const y = i * height / 5;
+    ctx.beginPath(); ctx.moveTo(0, y); ctx.lineTo(width, y); ctx.stroke();
+  }
+  for (let i = 0; i <= 5; i++) {
+    const x = i * width / 5;
+    ctx.beginPath(); ctx.moveTo(x, 0); ctx.lineTo(x, height); ctx.stroke();
+  }
+
+  const xStep = width / (Object.keys(realData).length - 1);
+
+  // Лінія 1: Основні дані (зелена)
+  ctx.beginPath();
+  let first1 = true;
+  Object.keys(realData).forEach((k, i) => {
+    if (k === 'chaos') return;
+    const val = realData[k];
+    const x = i * xStep;
+    const y = height - val * height;
+    if (first1) { ctx.moveTo(x, y); first1 = false; } else { ctx.lineTo(x, y); }
+  });
+  ctx.strokeStyle = 'rgba(0,255,180,0.7)';
+  ctx.lineWidth = 1.5;
+  ctx.stroke();
+
+  // Лінія 2: Сонячні індекси (жовта)
+  ctx.beginPath();
+  let first2 = true;
+  Object.keys(solarIndices).forEach((k, i) => {
+    let val = solarIndices[k];
+    if (k === 'f107') val = Math.min(1, val / 300);
+    else if (k === 'kp') val = val / 9;
+    else if (k === 'ap') val = Math.min(1, val / 400);
+    else if (k === 'dst') val = Math.min(1, Math.max(0, (val + 200) / 400));
+    else if (k === 'ssn') val = Math.min(1, val / 300);
+    else if (k === 'xray') val = Math.min(1, (val + 8) / 10);
+    else if (k === 'proton' || k === 'electron') val = Math.min(1, Math.log10(val + 1) / 3);
+    else if (k === 'bz') val = Math.min(1, Math.max(0, (val + 20) / 40));
+    else if (k === 'density') val = Math.min(1, val / 50);
+
+    const x = i * (width / (Object.keys(solarIndices).length - 1));
+    const y = height - val * height;
+    if (first2) { ctx.moveTo(x, y); first2 = false; } else { ctx.lineTo(x, y); }
+  });
+  ctx.strokeStyle = 'rgba(255,220,80,0.7)';
+  ctx.lineWidth = 1.5;
+  ctx.stroke();
+
+  // Лінія 3: Якість повітря / Погода (блакитно-зелена)
+  ctx.beginPath();
+  let first3 = true;
+  Object.keys(earthEnvData).forEach((k, i) => {
+    let val = earthEnvData[k];
+    if (k.includes('pm25')) val = Math.min(1, val / 100);
+    else if (k === 'air_quality_aqi') val = Math.min(1, val / 500);
+    else if (k === 'co') val = Math.min(1, val / 10);
+    else if (k === 'no2' || k === 'o3' || k === 'so2') val = Math.min(1, val / 200);
+    else if (k === 'uv_index') val = Math.min(1, val / 12);
+    else if (k === 'humidity' || k === 'cloud_cover') val = val / 100;
+    else if (k === 'visibility') val = Math.min(1, val / 30);
+
+    const x = i * (width / (Object.keys(earthEnvData).length - 1));
+    const y = height - val * height;
+    if (first3) { ctx.moveTo(x, y); first3 = false; } else { ctx.lineTo(x, y); }
+  });
+  ctx.strokeStyle = 'rgba(80,255,220,0.7)';
+  ctx.lineWidth = 1.5;
+  ctx.stroke();
+
+  ctx.restore();
+}
+
 // --- Графік 1: Основні дані ---
 function drawLeftGrid() {
   const margin = 16, width = 180, height = 120;
   ctx.save();
-  ctx.translate(margin, 180);
+  ctx.translate(margin, 120 + height + 20); // зсунуто нижче від combined
 
   ctx.strokeStyle = 'rgba(0,180,255,0.3)';
   ctx.lineWidth = 1;
@@ -291,7 +365,7 @@ function drawLeftGrid() {
 function drawSolarGrid() {
   const margin = 16, width = 180, height = 120;
   ctx.save();
-  ctx.translate(margin, 180 + height + 40);
+  ctx.translate(margin, 120 + (height + 20) * 2);
 
   ctx.strokeStyle = 'rgba(255,180,0,0.3)';
   ctx.lineWidth = 1;
@@ -342,7 +416,7 @@ function drawSolarGrid() {
 function drawEarthEnvGrid() {
   const margin = 16, width = 180, height = 120;
   ctx.save();
-  ctx.translate(margin, 180 + (height + 40) * 2);
+  ctx.translate(margin, 120 + (height + 20) * 3);
 
   ctx.strokeStyle = 'rgba(0,255,120,0.3)';
   ctx.lineWidth = 1;
@@ -408,7 +482,6 @@ function loop() {
   const cx = canvas.width / 2;
   const cy = canvas.height / 2;
 
-  // Зірки
   const starMod = 1 - chaos * 0.3;
   stars.forEach(s => {
     const tw = Math.sin(t * s.twinkle * 12 + s.x * 0.008) * 0.18 * starMod;
@@ -416,7 +489,6 @@ function loop() {
     ctx.fillRect(s.x, s.y, s.size, s.size);
   });
 
-  // Пульсуюча сітка
   const gridSpacing = 30;
   for (let gx = 0; gx < canvas.width; gx += gridSpacing) {
     for (let gy = 0; gy < canvas.height; gy += gridSpacing) {
@@ -431,7 +503,6 @@ function loop() {
     }
   }
 
-  // Спіралі
   for (let s = 0; s < 4; s++) {
     ctx.beginPath();
     for (let i = 0; i < 150; i++) {
@@ -446,7 +517,6 @@ function loop() {
     ctx.stroke();
   }
 
-  // Формули
   formulaObjs.forEach(f => {
     f.alpha = Math.sin(t * 0.5 + f.phase) * 0.5 + 0.5;
     ctx.fillStyle = `rgba(180,255,200,${f.alpha * 0.25})`;
@@ -454,12 +524,12 @@ function loop() {
     ctx.fillText(f.text, f.x + Math.sin(t + f.phase) * 20, f.y + Math.cos(t + f.phase) * 15);
   });
 
-  // Графіки
+  // Графіки — загальний перший (найвищий)
+  drawCombinedGrid();
   drawLeftGrid();
   drawSolarGrid();
   drawEarthEnvGrid();
 
-  // Блобі
   const avg = blobs.reduce((s, b) => s + (realData[b.param] || 0.5), 0) / blobs.length;
   blobs.forEach(b => {
     b.currentSize = lerp(b.currentSize, b.targetSize, 0.04 + chaos * 0.10);
