--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>GEOMETRIC CHAOS · CYBER GRID</title>
+<title>GEOMETRIC CHAOS.ARHIVE.2026 lavanda audit ibonarium project 2026</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 html, body {
@@ -115,7 +115,7 @@ canvas { display:block; }
 <div id="data">ініціалізація...</div>
 <div id="clock">—</div>
 
-<div id="system-link">system1</div>
+<div id="system-link">february.2026</div>
 
 <canvas id="c"></canvas>
 
