--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ canvas { display:block; }
 
 <div id="section-number">№2</div>
 
-<div id="hud">GEOMETRIC CHAOS — CYBER GRID</div>
+<div id="hud">GEOMETRIC CHAOS.ARHIVE.2026 lavanda audit ibonarium project 2026:</div>
 <div id="status"></div>
 <div id="data">ініціалізація...</div>
 <div id="clock">—</div>
