--- a/index.html
+++ b/index.html
@@ -65,24 +65,7 @@ canvas { display:block; }
   color:#0af;
   z-index: 5;
 }
-
-/* Додано: великий №2 по центру */
-#section-number {
-  position: fixed;
-  inset: 0;
-  width: fit-content;
-  height: fit-content;
-  margin: auto;
-  font-size: 42vw;
-  font-weight: 900;
-  color: #0a0a0a;
-  user-select: none;
-  pointer-events: none;
-  z-index: 1;
-  line-height: 0.75;
-  text-shadow: 0 0 60px #000;
-}
-
+  
 /* Додано: system1 внизу по центру */
 #system-link {
   position: fixed;
@@ -108,9 +91,9 @@ canvas { display:block; }
 </head>
 <body>
 
-<div id="section-number">№2</div>
+<div id="section-number"></div>
 
-<div id="hud">GEOMETRIC CHAOS — CYBER GRID</div>
+<div id="hud">GEOMETRIC CHAOS.lavanda audit.ibonarium.project.2026.ARHIVE</div>
 <div id="status"></div>
 <div id="data">ініціалізація...</div>
 <div id="clock">—</div>
